# courses-scraper

./: .sonarcloud.properties  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: lint.yaml
app/: __main__.py  constants.py
