[project]
name = "courses-scraper"
version = "0.1.0"
description = "Courses Scraper"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "requests>=2.32.5,<3",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.0.4,<7",
    "pandas>=2.3.3,<4",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3",
    "ruff>=0.15.12,<1",
    "lxml-stubs>=0.5.1",
    "pandas-stubs>=2.3.3.251219,<4",
    "types-tqdm>=4.67.3.20260508,<5",
    "types-beautifulsoup4>=4.12.0.20250516,<5",
    "types-requests>=2.33.0.20260508,<3",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = ["PLR2004", "PLR0912", "PLR0915", "TRY003", "PLR0911", "RET504"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
